# bazel-examples

./: README.md  WORKSPACE.bazel
scripts/: ci.sh
src/services/service1/: BUILD.bazel  main.go
src/services/service2/: BUILD.bazel  main.go
src/services/service3/: BUILD.bazel  main.go
